<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/export_layout_main"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            tools:context=".dbfragments.ExportDataFragment">

        <TextView
                android:id="@+id/export_text_status"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_width="0dp"
                android:textSize="20sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/export_text_header_bluetooth"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:text="@string/export_send_scout"
                app:layout_constraintStart_toStartOf="@+id/export_button_bluetooth"
                app:layout_constraintTop_toBottomOf="@id/export_text_status"
                style="?textAppearanceButton" />

        <Button
                android:id="@+id/export_button_bluetooth"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="0dp"
                android:text="@string/export_button_bluetooth"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/export_text_header_bluetooth"
                app:layout_constraintWidth_max="256dp"
                app:layout_constraintWidth_min="wrap" />


        <TextView
                android:id="@+id/export_text_header_qr"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:text="@string/generate_qr_header"
                android:textAppearance="?textAppearanceButton"
                app:layout_constraintStart_toStartOf="@+id/export_button_qr_obj"
                app:layout_constraintTop_toBottomOf="@id/export_button_bluetooth" />

        <Button
                android:id="@+id/export_button_qr_obj"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="0dp"
                android:text="@string/objective"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/export_text_header_qr"
                app:layout_constraintWidth_max="256dp"
                app:layout_constraintWidth_min="wrap"
                tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
                android:id="@+id/export_button_qr_sub"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_width="0dp"
                android:text="@string/subjective"
                app:layout_constraintBaseline_toBaselineOf="@id/export_button_qr_obj"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintWidth_max="256dp"
                app:layout_constraintWidth_min="wrap"
                tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
                android:id="@+id/export_button_qr_pit"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_width="0dp"
                android:text="@string/pit"
                app:layout_constraintBaseline_toBaselineOf="@id/export_button_qr_obj"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintWidth_max="256dp"
                app:layout_constraintWidth_min="wrap"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <TextView
                android:id="@+id/export_text_header_csv"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:text="@string/export_csv_file"
                android:textAppearance="?textAppearanceButton"
                app:layout_constraintStart_toStartOf="@+id/export_button_csv_obj"
                app:layout_constraintTop_toBottomOf="@+id/export_button_qr_obj" />

        <Button
                android:id="@+id/export_button_csv_obj"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="0dp"
                android:text="@string/objective"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/export_text_header_csv"
                app:layout_constraintWidth_max="256dp"
                app:layout_constraintWidth_min="wrap" />


        <Button
                android:id="@+id/export_button_csv_sub"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_width="0dp"
                android:text="@string/subjective"
                app:layout_constraintBaseline_toBaselineOf="@id/export_button_csv_obj"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintWidth_max="256dp"
                app:layout_constraintWidth_min="wrap" />

        <Button
                android:id="@+id/export_button_csv_pit"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_width="0dp"
                android:text="@string/pit"
                app:layout_constraintBaseline_toBaselineOf="@id/export_button_csv_obj"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintWidth_max="256dp"
                app:layout_constraintWidth_min="wrap"
                tools:ignore="TextContrastCheck" />

        <TextView
                android:id="@+id/export_text_header_delete"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:text="@string/delete_data"
                android:textAppearance="?textAppearanceButton"
                app:layout_constraintStart_toStartOf="@+id/export_button_delete_obj"
                app:layout_constraintTop_toBottomOf="@+id/export_button_csv_obj" />

        <Button
                android:id="@+id/export_button_delete_obj"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="0dp"
                android:text="@string/objective"
                style="@style/Widget.ScoutingRadar2022.Button.Danger"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/export_text_header_delete"
                app:layout_constraintWidth_max="256dp"
                app:layout_constraintWidth_min="wrap" />


        <Button
                android:id="@+id/export_button_delete_sub"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_width="0dp"
                android:text="@string/subjective"
                style="@style/Widget.ScoutingRadar2022.Button.Danger"
                app:layout_constraintBaseline_toBaselineOf="@id/export_button_delete_obj"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintWidth_max="256dp"
                app:layout_constraintWidth_min="wrap" />

        <Button
                android:id="@+id/export_button_delete_pit"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_width="0dp"
                android:text="@string/pit"
                style="@style/Widget.ScoutingRadar2022.Button.Danger"
                app:layout_constraintBaseline_toBaselineOf="@id/export_button_delete_obj"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintWidth_max="256dp"
                app:layout_constraintWidth_min="wrap"
                tools:ignore="TextContrastCheck" />

        <ImageView
                android:contentDescription="@string/scouting_radar_logo"
                android:id="@+id/export_imageview"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:src="@drawable/app_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/export_button_delete_obj"
                app:layout_constraintWidth_max="256dp" />



        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"

                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"


                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.67" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
